# upm

./: .gitignore  Cargo.toml  README.md
doc/Technical_Details/: README.md  Technical_Details.drawio
src/: lib.rs  main.rs
src/backend/: apt.rs  brew.rs  flatpak.rs  mod.rs
src/gui/: mod.rs
src/host/: mod.rs
src/rpc/: client.rs  mod.rs  server.rs
src/tui/: mod.rs  search_tab.rs
src/worker/: mod.rs
