[package]
name = "upm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.22"
nix = { version = "0.29.0", features = ["fs", "process", "user"] }
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
